--- a/src/Makefile.build
+++ b/src/Makefile.build
@@ -63,7 +63,9 @@ userprog_SRC += userprog/gdt.c		# GDT initialization.
 userprog_SRC += userprog/tss.c		# TSS management.
 
 # Virtual memory code.
-vm_SRC  = vm/page.c					# Paging for segments loaded from executables.
+vm_SRC  = vm/frame.c			    # Managing pages and lru list.
+vm_SRC += vm/page.c					# Paging for segments loaded from executables.
+vm_SRC += vm/swap.c					# Swapping pages between kernel memory and disk swap partition.
 
 # Filesystem code.
 filesys_SRC  = filesys/filesys.c	# Filesystem core.
